Add links to ice36 artifacts.

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -239,6 +239,16 @@
                                 <td align="center">@SERVER35_SHA1@ (<a
                                         href="@SERVER35@.sha1">SHA1</a>)</td>
                             </tr>
+                            <tr>
+                                <td><a href="@SERVER36@"><img
+                                        src="images/ice_3_6_server.png"
+                                        alt="Ice 3.6 Server Download"
+                                     /></a></td>
+                                <td align="center">@SERVER36_SIZE@</td>
+                                <td>@SERVER36_BASE@</td>
+                                <td align="center">@SERVER36_SHA1@ (<a
+                                        href="@SERVER36@.sha1">SHA1</a>)</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -306,6 +316,16 @@
                                 <td align="center">@PYTHON35_SHA1@ (<a
                                         href="@PYTHON35@.sha1">SHA1</a>)</td>
                             </tr>
+                            <tr>
+                                <td><a href="@PYTHON36@"><img
+                                        src="images/ice_python_3_6.png"
+                                        alt="Ice 3.6 Python Download"
+                                     /></a></td>
+                                <td align="center">@PYTHON36_SIZE@</td>
+                                <td>@PYTHON36_BASE@</td>
+                                <td align="center">@PYTHON36_SHA1@ (<a
+                                        href="@PYTHON36@.sha1">SHA1</a>)</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -335,6 +355,16 @@
                                 <td>@JAVA35_BASE@</td>
                                 <td align="center">@JAVA35_SHA1@ (<a
                                         href="@JAVA35@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@JAVA36@"><img
+                                        src="images/ice_java_3_6.png"
+                                        alt="Ice 3.6 Java Download"
+                                     /></a></td>
+                                <td align="center">@JAVA36_SIZE@</td>
+                                <td>@JAVA36_BASE@</td>
+                                <td align="center">@JAVA36_SHA1@ (<a
+                                        href="@JAVA36@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
