--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -413,7 +413,7 @@
                         </tbody>
                     </table>
                 </div>
-                <p>Third-party components:</p>
+                <p>Third-party sources:</p>
                 <div class="split-header">
                     <table border="0" cellpadding="5" summary="Third-party source code downloads">
                         <tbody>
@@ -467,6 +467,62 @@
                                 <td align="center"><a href="@PNG_SOURCE@.sha1">@PNG_SOURCE_SHA1@</a></td>
                             </tr>
 
+                            <tr>
+                                <td><img src="images/square_c.png"
+                                                     alt="C++ source"/></td>
+                                <td>TIFF</td>
+                                <td><a href="@TIFF_SOURCE@"><img src="images/square_tgz.png" alt="tgz"/></a></td>
+                                <td align="right">@TIFF_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@TIFF_SOURCE@.sha1">@TIFF_SOURCE_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td><img src="images/square_c++.png"
+                                                     alt="C++ source"/></td>
+                                <td>Xalan</td>
+                                <td><a href="@XALAN_SOURCE@"><img src="images/square_tgz.png" alt="tgz"/></a></td>
+                                <td align="right">@XALAN_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@XALAN_SOURCE@.sha1">@XALAN_SOURCE_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td><img src="images/square_c++.png"
+                                                     alt="C++ source"/></td>
+                                <td>Xerces</td>
+                                <td><a href="@XERCES_SOURCE@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@XERCES_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@XERCES_SOURCE@.sha1">@XERCES_SOURCE_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td><img src="images/square_c.png"
+                                                     alt="C++ source"/></td>
+                                <td>Zlib</td>
+                                <td><a href="@ZLIB_SOURCE@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@ZLIB_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@ZLIB_SOURCE@.sha1">@ZLIB_SOURCE_SHA1@</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <p>Third-party tools (build dependencies):</p>
+                <div class="split-header">
+                    <table border="0" cellpadding="5" summary="Third-party source code downloads">
+                        <tbody>
+                            <tr>
+                                <th colspan="2" rowspan="2">Component</th>
+                                <th colspan="3">Download</th>
+                            </tr>
+                            <tr>
+                                <th>File</th>
+                                <th>Size</th>
+                                <th>SHA1</th>
+                            </tr>
+                            <tr>
+                                <td><img src="images/square_windows.png"
+                                                     alt="C++ source"/></td>
+                                <td>Patch binary</td>
+                                <td><a href="@PATCH_SOURCE@"><img src="images/square_zip.png" alt="tgz"/></a></td>
+                                <td align="right">@PATCH_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@PATCH_SOURCE@.sha1">@PATCH_SOURCE_SHA1@</a></td>
+                            </tr>
                             <tr>
                                 <td><img src="images/square_python.png"
                                                      alt="C++ source"/></td>
@@ -523,38 +579,13 @@
                                 <td align="right">@PY_SPHINX_SOURCE_SIZE@</td>
                                 <td align="center"><a href="@PY_SPHINX_SOURCE@.sha1">@PY_SPHINX_SOURCE_SHA1@</a></td>
                             </tr>
-
                             <tr>
-                                <td><img src="images/square_c.png"
+                                <td><img src="images/square_windows.png"
                                                      alt="C++ source"/></td>
-                                <td>TIFF</td>
-                                <td><a href="@TIFF_SOURCE@"><img src="images/square_tgz.png" alt="tgz"/></a></td>
-                                <td align="right">@TIFF_SOURCE_SIZE@</td>
-                                <td align="center"><a href="@TIFF_SOURCE@.sha1">@TIFF_SOURCE_SHA1@</a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_c++.png"
-                                                     alt="C++ source"/></td>
-                                <td>Xalan</td>
-                                <td><a href="@XALAN_SOURCE@"><img src="images/square_tgz.png" alt="tgz"/></a></td>
-                                <td align="right">@XALAN_SOURCE_SIZE@</td>
-                                <td align="center"><a href="@XALAN_SOURCE@.sha1">@XALAN_SOURCE_SHA1@</a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_c++.png"
-                                                     alt="C++ source"/></td>
-                                <td>Xerces</td>
-                                <td><a href="@XERCES_SOURCE@"><img src="images/square_txz.png" alt="txz"/></a></td>
-                                <td align="right">@XERCES_SOURCE_SIZE@</td>
-                                <td align="center"><a href="@XERCES_SOURCE@.sha1">@XERCES_SOURCE_SHA1@</a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_c.png"
-                                                     alt="C++ source"/></td>
-                                <td>Zlib</td>
-                                <td><a href="@ZLIB_SOURCE@"><img src="images/square_txz.png" alt="txz"/></a></td>
-                                <td align="right">@ZLIB_SOURCE_SIZE@</td>
-                                <td align="center"><a href="@ZLIB_SOURCE@.sha1">@ZLIB_SOURCE_SHA1@</a></td>
+                                <td>Tofrodos binary</td>
+                                <td><a href="@TOFRODOS_SOURCE@"><img src="images/square_zip.png" alt="tgz"/></a></td>
+                                <td align="right">@TOFRODOS_SOURCE_SIZE@</td>
+                                <td align="center"><a href="@TOFRODOS_SOURCE@.sha1">@TOFRODOS_SOURCE_SHA1@</a></td>
                             </tr>
                         </tbody>
                     </table>
