Updating downloads buttons

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -232,7 +232,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER35@"><img
-                                        src="images/ice_3_5_server.png"
+                                        src="images/server_ice_3_5.png"
                                         alt="Ice 3.5 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER35_SIZE@</td>
@@ -242,7 +242,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SERVER36@"><img
-                                        src="images/ice_3_6_server.png"
+                                        src="images/server_ice_3_6.png"
                                         alt="Ice 3.6 Server Download"
                                      /></a></td>
                                 <td align="center">@SERVER36_SIZE@</td>
@@ -309,7 +309,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON35@"><img
-                                        src="images/ice_python_3_5.png"
+                                        src="images/python_ice_3_5.png"
                                         alt="Ice 3.5 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON35_SIZE@</td>
@@ -319,7 +319,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON36@"><img
-                                        src="images/ice_python_3_6.png"
+                                        src="images/python_ice_3_6.png"
                                         alt="Ice 3.6 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON36_SIZE@</td>
@@ -349,7 +349,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@JAVA35@"><img
-                                        src="images/ice_java_3_5.png"
+                                        src="images/java_ice_3_5.png"
                                         alt="Ice 3.5 Java Download"
                                      /></a></td>
                                 <td align="center">@JAVA35_SIZE@</td>
@@ -359,7 +359,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@JAVA36@"><img
-                                        src="images/ice_java_3_6.png"
+                                        src="images/java_ice_3_6.png"
                                         alt="Ice 3.6 Java Download"
                                      /></a></td>
                                 <td align="center">@JAVA36_SIZE@</td>
