Unbold text & remove 'now'

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -147,18 +147,18 @@
                     </li>
                     <li>
                         <p>@COMMAND_LINE_TOOLS_BASE@ is a bundle of scripts for
-                            using Bio-Formats on the command line <b>now with
+                            using Bio-Formats on the command line with
                                 bioformats_package.jar included so you do not
-                                have to install both separately</b>. See the <a
+                                have to install both separately. See the <a
                                 href="@DOC_URL@/users/comlinetools/index.html"
                                 >command line tools documentation</a> for
                             further information.</p>
                     </li>
                     <li>
                         <p>@MATLAB_TOOLS_BASE@ is a bundle of functions for
-                            using Bio-Formats from MATLAB <b>now with
+                            using Bio-Formats from MATLAB with
                                 bioformats_package.jar included so you do not
-                                have to install both separately</b>. See the <a
+                                have to install both separately. See the <a
                                 href="@DOC_URL@/users/matlab/index.html">MATLAB
                                 documentation</a> for further information.</p>
                     </li>
