--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -60,61 +60,40 @@
                             href="#code">Source code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#previous">Previous versions</a>
                     </strong></p>
+                <h2><a name="downloads"
+                id="downloads"></a>Methods for obtaining a build</h2>
                 <ul>
-                    <li>
-                        <p>Full OME Files documentation is available <a
-                                href="@DOC_FILES_URL@">here</a>.</p>
-                    </li>
-                    <li>
-                        <p>Documentation for the native OME Files C++ API is available to read on the web <a
-                                href="@FILES_API_URL@">starting here</a>.</p>
-                    </li>
-                    <li>
-                        <p>Standalone "super" builds are
-                           self-contained, providing all the libraries
-                           required and so are to some extent
-                           independent of the platform they run on.
-                           For long-term support releases such as
-                           CentOS, this means that newer versions of
-                           the libraries than provided by the platform
-                           are included, which includes bugfixes and
-                           features which would otherwise be missing
-                           (such as BigTIFF support).  For
-                           rolling-release platforms (BSD ports, MacOS
-                           X homebrew), this means that the build will
-                           not break when the underlying platform
-                           changes, for example by updating the
-                           versions of the libraries we require to an
-                           incompatible version.</p>
-                    </li>
-                    <li>
-                        <p>The downside to the convenience of the
-                           "super" build is that system libraries you
-                           might want to link into your application
-                           may depend upon different versions of the
-                           libraries than provided here, which will
-                           make linking applications using such
-                           libraries difficult. In all cases you
-                           should be able to build from source to work
-                           on operating systems which meet
-                           the <a href="@DOC_SUPERBUILD_URL@prerequisites.html">requirements</a>.
-                           This will ensure your build is compatible
-                           with the libraries available on the
-                           system.</p>
-                    </li>
-                    <li>
-                        <p>Platform builds are built against a specific
-                           platform release and therefore should
-                           always work with the shared libraries
-                           provided by the platform.  These releases
-                           are provided only for platforms with
-                           guaranteed ABI stability during their
-                           supported lifetime, and which also provide
-                           all of the needed build dependencies.</p>
-                    </li>
+                    <li><p>
+                        Self-contained "super" build (download binary)
+                    </p></li>
+                    <li><p>
+                        Platform build (download binary)
+                    </p></li>
+                    <li><p>
+                        Source code (build locally)
+                    </p></li>
                 </ul>
                 <h2><a name="superbuild"
                 id="superbuild"></a>Self-contained "super" builds</h2>
+                <p>Standalone "super" builds are self-contained,
+                   providing all the libraries required and so are to
+                   some extent independent of the platform they run
+                   on.  For long-term support releases such as CentOS,
+                   this means that newer versions of the libraries
+                   than provided by the platform are included, which
+                   includes bugfixes and features which would
+                   otherwise be missing (such as BigTIFF support).
+                   For rolling-release platforms (BSD ports, MacOS X
+                   homebrew), this means that the build will not break
+                   when the underlying platform changes, for example
+                   by updating the versions of the libraries we
+                   require to an incompatible version.</p>
+                <p>The downside to the convenience of the "super"
+                   build is that system libraries you might want to
+                   link into your application may depend upon
+                   different versions of the libraries than provided
+                   here, which will make linking applications using
+                   such libraries difficult.</p>
                 <div class="split-table">
                     <table border="0" cellpadding="5" summary="Standalone bundle downloads">
                         <tbody>
@@ -252,11 +231,24 @@
                     </table>
                 </div>
                 <h2><a name="platform" id="platform"></a>Platform builds</h2>
+                <p>Platform builds are built against a specific
+                   platform release and therefore should always work
+                   with the shared libraries provided by the platform.
+                   These releases are provided only for platforms with
+                   guaranteed ABI stability during their supported
+                   lifetime, and which also provide all of the needed
+                   build dependencies.
+                </p>
+                <p>The system libraries required by the OME Files
+                   libraries must be installed.  These are listed in
+                   the <a href="@DOC_SUPERBUILD_URL@prerequisites.html">requirements</a>.
+                </p>
                 <div class="split-table">
                     <table border="0" cellpadding="5" summary="Platform bundle downloads">
                         <tbody>
                             <tr>
-                                <th colspan="2" rowspan="2">Platform</th>
+                                <th colspan="2"
+                                rowspan="2">Platform</th>
                                 <th rowspan="2">Configuration</th>
                                 <th colspan="3">Download</th>
                             </tr>
@@ -360,6 +352,14 @@
                     </table>
                 </div>
                 <h2><a name="code" id="code"></a>Source code</h2>
+                <p>Should the provided binary builds listed above be
+                   insufficient for your needs, in all cases you
+                   should be able to build from source to work on
+                   operating systems which meet
+                   the <a href="@DOC_SUPERBUILD_URL@prerequisites.html">requirements</a>.
+                   This will ensure your build is compatible with the
+                   libraries available on the system.
+                </p>
                 <p>OME components:</p>
                 <div class="split-table">
                     <table border="0" cellpadding="5" summary="Source code downloads">
