ome-files: Download page fixes

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -60,19 +60,6 @@
                             href="#code">Source code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#previous">Previous versions</a>
                     </strong></p>
-                <h2><a name="downloads"
-                id="downloads"></a>Methods for obtaining a build</h2>
-                <ul>
-                    <li><p>
-                        Self-contained "super" build (download binary)
-                    </p></li>
-                    <li><p>
-                        Platform build (download binary)
-                    </p></li>
-                    <li><p>
-                        Source code (build locally)
-                    </p></li>
-                </ul>
                 <h2><a name="superbuild"
                 id="superbuild"></a>Self-contained "super" builds</h2>
                 <p>Standalone "super" builds are self-contained,
@@ -304,53 +291,7 @@
                         </tbody>
                     </table>
                 </div>
-                        <p>Online documentation:
-                <div class="alt-table">
-                    <table border="0" cellpadding="5" summary="On-line documentation">
-                        <tbody>
-                            <tr>
-                                <th colspan="2">Documentation</th>
-                                <th>Link</th>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="OME Files C++ Documentation"/></td>
-                                <td>OME Files C++ Manual</td>
-                                <td><a href="@DOC_FILES_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="OME CMake Super-Build Documentation"/></td>
-                                <td>OME CMake Super-Build Manual</td>
-                                <td><a href="@DOC_SUPERBUILD_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="Documentation"/></td>
-                                <td>OME&nbsp;Common&nbsp;API&nbsp;reference</td>
-                                <td><a href="@COMMON_API_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="Documentation"/></td>
-                                <td>OME&nbsp;XML&nbsp;API&nbsp;reference</td>
-                                <td><a href="@XML_API_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="Documentation"/></td>
-                                <td>OME&nbsp;Files&nbsp;API&nbsp;reference</td>
-                                <td><a href="@FILES_API_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                            <tr>
-                                <td><img src="images/square_docs.png"
-                                                     alt="Documentation"/></td>
-                                <td>OME&nbsp;QtWidgets&nbsp;API&nbsp;reference</td>
-                                <td><a href="@QTWIDGETS_API_URL@"><img src="images/square_link.png" alt="link"/></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <p>The documentation is also available <a href="@DOC_URL@">online</a>.
                 <h2><a name="code" id="code"></a>Source code</h2>
                 <p>Should the provided binary builds listed above be
                    insufficient for your needs, in all cases you
