ome-files: Re-add FreeBSD downloads

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -140,6 +140,21 @@
                                 <td align="center"><a href="@OSX1011_DEBUG@.sha1">@OSX1011_DEBUG_SHA1@</a></td>
                             </tr>
                             <tr>
+                                <td rowspan="2"><img src="images/square_freebsd.png"
+                                                     alt="FreeBSD"/></td>
+                                <td rowspan="2">FreeBSD&nbsp;11.0</td>
+                                <td>Release</td>
+                                <td><a href="@FREEBSD11_RELEASE@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@FREEBSD11_RELEASE_SIZE@</td>
+                                <td align="center"><a href="@FREEBSD11_RELEASE@.sha1">@FREEBSD11_RELEASE_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td>Debug</td>
+                                <td><a href="@FREEBSD11_DEBUG@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@FREEBSD11_DEBUG_SIZE@</td>
+                                <td align="center"><a href="@FREEBSD11_DEBUG@.sha1">@FREEBSD11_DEBUG_SHA1@</a></td>
+                            </tr>
+                            <tr>
                                 <td rowspan="2"><img src="images/square_ubuntu.png"
                                                      alt="Ubuntu"/></td>
                                 <td rowspan="2">Ubuntu&nbsp;14.04&nbsp;LTS</td>
