ome-files: Update third party component capitalisation

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -434,7 +434,7 @@
                             <tr>
                                 <td><img src="images/square_c.png"
                                                      alt="C++ source"/></td>
-                                <td>Bzip2</td>
+                                <td>BZip2</td>
                                 <td><a href="@BZIP2_SOURCE@"><img src="images/square_tgz.png" alt="tgz"/></a></td>
                                 <td align="right">@BZIP2_SOURCE_SIZE@</td>
                                 <td align="center"><a href="@BZIP2_SOURCE@.sha1">@BZIP2_SOURCE_SHA1@</a></td>
@@ -491,7 +491,7 @@
                             <tr>
                                 <td><img src="images/square_c.png"
                                                      alt="C++ source"/></td>
-                                <td>Zlib</td>
+                                <td>ZLib</td>
                                 <td><a href="@ZLIB_SOURCE@"><img src="images/square_txz.png" alt="txz"/></a></td>
                                 <td align="right">@ZLIB_SOURCE_SIZE@</td>
                                 <td align="center"><a href="@ZLIB_SOURCE@.sha1">@ZLIB_SOURCE_SHA1@</a></td>
