ome-files: Update documentation bundle title

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -293,7 +293,7 @@
                             <tr>
                                 <td rowspan="2"><img src="images/square_docs.png"
                                                      alt="Documentation"/></td>
-                                <td rowspan="2">API&nbsp;reference</td>
+                                <td rowspan="2">Documentation bundle</td>
                                 <td><a href="@DOCS_BUNDLE_TAR@"><img src="images/square_txz.png" alt="txz"/></a></td>
                                 <td align="right">@DOCS_BUNDLE_TAR_SIZE@</td>
                                 <td align="center"><a href="@DOCS_BUNDLE_TAR@.sha1">@DOCS_BUNDLE_TAR_SHA1@</a></td>
