Revert "Temp loci_tools-> loci-tools"
This reverts commit 04a84ee296614797e4f1f6ad5c8d4c6c636939cd.

--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -221,8 +221,8 @@
                             </tr>
                             <tr>
                                 <td>LOCI Tools</td>
-                                <td><a href="@loci-tools.jar@"
-                                        >loci-tools.jar</a></td>
+                                <td><a href="@loci_tools.jar@"
+                                        >loci_tools.jar</a></td>
                             </tr>
                             <tr>
                                 <th colspan="2">Core</th>
