--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -76,7 +76,8 @@
 
                     <li>
                         <p>Full documentation is available as <a
-                                href="@DOC_URL@">web documentation</a> and there are
+                                href="@DOC_URL@">web documentation</a>
+                                <a href="@DOC"/> download as zipped html<a> and there are
                             user guides for the clients on our <a
                                 href="http://help.openmicroscopy.org">Help
                                 website</a></p>
