--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -77,7 +77,7 @@
                     <li>
                         <p>Full documentation is available to <a
                                 href="@DOC_URL@">read on the web</a> or to 
-                                <a href="@DOC"/>download as zipped html<a> and there are
+                                <a href="@DOC">download as zipped html</a> and there are
                             user guides for the clients on our <a
                                 href="http://help.openmicroscopy.org">Help
                                 website</a></p>
