ome-files: Update names and versions for 0.3.0 release

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -351,16 +351,16 @@
                                 <td rowspan="2"><img src="images/square_c++.png"
                                                      alt="C++ source"/></td>
                                 <td rowspan="2">OME&nbsp;XML</td>
-                                <td rowspan="2"><a href="http://github.com/openmicroscopy/bioformats"><img src="images/square_github.png" alt="zip"/></a></td>
-                                <td rowspan="2"><a href="@XML_TAG_URL@">v@XML_VERSION@</a></td>
-                                <td><a href="@BF_SOURCE_TXZ@"><img src="images/square_txz.png" alt="txz"/></a></td>
-                                <td align="right">@BF_SOURCE_TXZ_SIZE@</td>
-                                <td align="center"><a href="@BF_SOURCE_TXZ@.sha1">@BF_SOURCE_TXZ_SHA1@</a></td>
+                                <td rowspan="2"><a href="http://github.com/ome/ome-model"><img src="images/square_github.png" alt="zip"/></a></td>
+                                <td rowspan="2"><a href="@MODEL_TAG_URL@">v@MODEL_VERSION@</a></td>
+                                <td><a href="@MODEL_SOURCE_TXZ@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@MODEL_SOURCE_TXZ_SIZE@</td>
+                                <td align="center"><a href="@MODEL_SOURCE_TXZ@.sha1">@MODEL_SOURCE_TXZ_SHA1@</a></td>
                             </tr>
                             <tr>
-                                <td><a href="@BF_SOURCE_ZIP@"><img src="images/square_zip.png" alt="zip"/></a></td>
-                                <td align="right">@BF_SOURCE_ZIP_SIZE@</td>
-                                <td align="center"><a href="@BF_SOURCE_ZIP@.sha1">@BF_SOURCE_ZIP_SHA1@</a></td>
+                                <td><a href="@MODEL_SOURCE_ZIP@"><img src="images/square_zip.png" alt="zip"/></a></td>
+                                <td align="right">@MODEL_SOURCE_ZIP_SIZE@</td>
+                                <td align="center"><a href="@MODEL_SOURCE_ZIP@.sha1">@MODEL_SOURCE_ZIP_SHA1@</a></td>
                             </tr>
                             <tr>
                                 <td rowspan="2"><img src="images/square_c++.png"
@@ -376,6 +376,21 @@
                                 <td><a href="@FILES_SOURCE_ZIP@"><img src="images/square_zip.png" alt="zip"/></a></td>
                                 <td align="right">@FILES_SOURCE_ZIP_SIZE@</td>
                                 <td align="center"><a href="@FILES_SOURCE_ZIP@.sha1">@FILES_SOURCE_ZIP_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2"><img src="images/square_c++.png"
+                                                     alt="C++ source"/></td>
+                                <td rowspan="2">OME&nbsp;QtWidgets</td>
+                                <td rowspan="2"><a href="http://github.com/ome/ome-qtwidgets"><img src="images/square_github.png" alt="zip"/></a></td>
+                                <td rowspan="2"><a href="@QTWIDGETS_TAG_URL@">v@QTWIDGETS_VERSION@</a></td>
+                                <td><a href="@QTWIDGETS_SOURCE_TXZ@"><img src="images/square_txz.png" alt="txz"/></a></td>
+                                <td align="right">@QTWIDGETS_SOURCE_TXZ_SIZE@</td>
+                                <td align="center"><a href="@QTWIDGETS_SOURCE_TXZ@.sha1">@QTWIDGETS_SOURCE_TXZ_SHA1@</a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="@QTWIDGETS_SOURCE_ZIP@"><img src="images/square_zip.png" alt="zip"/></a></td>
+                                <td align="right">@QTWIDGETS_SOURCE_ZIP_SIZE@</td>
+                                <td align="center"><a href="@QTWIDGETS_SOURCE_ZIP@.sha1">@QTWIDGETS_SOURCE_ZIP_SHA1@</a></td>
                             </tr>
                             <tr>
                                 <td rowspan="2"><img src="images/square_cmake.png"
