filescppgen: Rename OME XML to OME Model

--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -350,7 +350,7 @@
                             <tr>
                                 <td rowspan="2"><img src="images/square_c++.png"
                                                      alt="C++ source"/></td>
-                                <td rowspan="2">OME&nbsp;XML</td>
+                                <td rowspan="2">OME&nbsp;Model</td>
                                 <td rowspan="2"><a href="http://github.com/ome/ome-model"><img src="images/square_github.png" alt="zip"/></a></td>
                                 <td rowspan="2"><a href="@MODEL_TAG_URL@">v@MODEL_VERSION@</a></td>
                                 <td><a href="@MODEL_SOURCE_TXZ@"><img src="images/square_txz.png" alt="txz"/></a></td>
