--- a/files_cpp_downloads.html
+++ b/files_cpp_downloads.html
@@ -589,10 +589,9 @@
                 </div>
                 <h2><a name="previous" id="previous"></a>Previous versions</h2>
                     <p>
-                        Previous versions of OME Files C++ (formerly
-                        named "Bio-Formats C++") can be found on the
-                        <a href="http://downloads.openmicroscopy.org/bio-formats-cpp/?C=M;O=D"
-                           >Bio-Formats C++ archive</a> page.
+                        Previous versions of OME Files C++ can be found on the
+                        <a href="http://downloads.openmicroscopy.org/ome-files-cpp/?C=M;O=D"
+                           >OME Files C++ archive</a> page.
                     </p>
             </div><!-- /.entry-content -->
 
