Remove ref to windows installation

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -247,11 +247,9 @@
                 </div>
                 <ul>
                     <li>
-                        <p>Installation instructions are available for: <a
+                        <p>Installation instructions are available for <a
                                 href="@DOC_URL@/sysadmins/unix/server-installation.html"
-                                >Unix platforms</a>, <a
-                                href="@DOC_URL@/sysadmins/windows/server-installation.html"
-                                >Microsoft Windows</a>
+                                >Unix platforms</a>
                         </p>
                     </li>
                     <li>
