Update figure url

--- a/figure_downloads.html
+++ b/figure_downloads.html
@@ -70,7 +70,7 @@
                     <li>
                         <p>Source code and the latest development version can be
                             found on <a
-                                href="https://github.com/ome/figure"
+                                href="https://github.com/ome/omero-figure"
                                 >GitHub</a>.</p>
                     </li>
                 </ul>
