Update page for 1.3.0

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -66,17 +66,14 @@
                                 href="https://www.openmicroscopy.org/site/products/partner/omero.mtools"
                                 >Product page</a> for information.</p></li>
                     <li><p>Please note that this version of OMERO.mtools is
-                        compatible with OMERO 5.2 servers. If you require
-                        compatibility with an OMERO 5.1 server or earlier,
+                        compatible with OMERO 5.3 servers. If you require
+                        compatibility with an OMERO 5.2 server or earlier,
                         previous versions are available from the main <a
                                 href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D"
                                 >downloads folder</a>. </p></li>
                     <li><p>Choose the version of OMERO.mtools for your
                         platform (Windows/Mac) below.</p></li>
-                    <li><p>OMERO.mtools for Mac comes with the correct version
-                        of MCR (MATLAB Compiler Runtime) bundled (currently
-                        2013b, v8.2).</p></li>
-                    <li><p>The Windows mtools installer will fetch the MCR
+                    <li><p>The installer will fetch the MCR
                         from Mathworks and install it for you if you do not
                         already have it, but it may be more
                         efficient to install it manually from the table below
@@ -130,9 +127,15 @@
                             </tr>
                             <tr>
                                 <td><a
-                                        href="http://www.mathworks.com/supportfiles/downloads/R2013b/deployment_files/R2013b/installers/win64/MCR_R2013b_win64_installer.exe"
+                                        href="https://www.mathworks.com/supportfiles/downloads/R2016b/deployment_files/R2016b/installers/win64/MCR_R2016b_win64_installer.exe"
                                         ><img src="images/mcr_windows.png"
                                         alt="Windows MCR Download" /></a></td>
+                            </tr>
+                            <tr>
+                                <td><a
+                                        href="https://www.mathworks.com/supportfiles/downloads/R2016b/deployment_files/R2016b/installers/maci64/MCR_R2016b_maci64_installer.dmg.zip"
+                                        ><img src="images/mcr_mac.png"
+                                        alt="Mac OS X MCR Download" /></a></td>
                             </tr>
                         </tbody>
                     </table>
