Specify mcr version

--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -73,7 +73,7 @@
                                 >downloads folder</a>. </p></li>
                     <li><p>Choose the version of OMERO.mtools for your
                         platform (Windows/Mac) below.</p></li>
-                    <li><p>The installer will fetch the MCR
+                    <li><p>The installer will fetch the 2016b MCR
                         from Mathworks and install it for you if you do not
                         already have it, but it may be more
                         efficient to install it manually from the table below
