--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -54,8 +54,8 @@
                 <h2>OMERO.mtools @VERSION@ Downloads</h2>
                 <p>
                     <strong><a href="#mtools"
-                            >OMERO.mtools</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                            href="#mcr">MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                            >OMERO.mtools without MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                            href="#mcr">OMERO.mtools with MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#previous">Previous versions</a>
                     </strong></p>
                 <ul>
@@ -85,7 +85,7 @@
                                 >GitHub</a>.</p>
                     </li>
                 </ul>
-                <h2><a name="mtools" id="mtools"></a>OMERO.mtools downloads</h2>
+                <h2><a name="mtools" id="mtools"></a>OMERO.mtools without MCR downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
                         <tbody>
@@ -118,24 +118,35 @@
                         </tbody>
                     </table>
                 </div>
-                <h2><a name="mcr" id="mcr"></a>MCR download</h2>
+                <h2><a name="mtools" id="mtools"></a>OMERO.mtools with MCR downloads</h2>
                 <div class="alt-table">
-                    <table width="269" border="0" cellpadding="5" summary="MCR download">
+                    <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
                         <tbody>
                             <tr>
-                                <th width="269">MCR</th>
+                                <th width="269">Client</th>
+                                <th width="85">Size</th>
+                                <th width="271">File Name</th>
+                                <th width="125">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a
-                                        href="https://www.mathworks.com/supportfiles/downloads/R2016b/deployment_files/R2016b/installers/win64/MCR_R2016b_win64_installer.exe"
-                                        ><img src="images/mcr_windows.png"
-                                        alt="Windows MCR Download" /></a></td>
+                                <td><a href="@MTOOLS_WIN@"><img
+                                        src="images/omero_mtools_win.png"
+                                        alt="Windows Client Download"
+                                     /></a></td>
+                                <td align="center">@MTOOLS_WIN_MCR_SIZE@</td>
+                                <td>@MTOOLS_WIN_MCR_BASE@</td>
+                                <td align="center">@MTOOLS_WIN_MCR_SHA1@ (<a
+                                        href="@MTOOLS_WIN@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a
-                                        href="https://www.mathworks.com/supportfiles/downloads/R2016b/deployment_files/R2016b/installers/maci64/MCR_R2016b_maci64_installer.dmg.zip"
-                                        ><img src="images/mcr_mac.png"
-                                        alt="Mac OS X MCR Download" /></a></td>
+                                <td><a href="@MTOOLS_MAC@"><img
+                                        src="images/omero_mtools_mac.png"
+                                        alt="Mac OS X Client Download"
+                                     /></a></td>
+                                <td align="center">@MTOOLS_MAC_MCR_SIZE@</td>
+                                <td>@MTOOLS_MAC_MCR_BASE@</td>
+                                <td align="center">@MTOOLS_MAC_MCR_SHA1@ (<a
+                                        href="@MTOOLS_MAC@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
