--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -129,7 +129,7 @@
                                 <th width="125">Checksum</th>
                             </tr>
                             <tr>
-                                <td><a href="@MTOOLS_WIN@"><img
+                                <td><a href="@MTOOLS_WIN_MCR@"><img
                                         src="images/omero_mtools_win.png"
                                         alt="Windows Client Download"
                                      /></a></td>
@@ -139,7 +139,7 @@
                                         href="@MTOOLS_WIN@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
-                                <td><a href="@MTOOLS_MAC@"><img
+                                <td><a href="@MTOOLS_MAC_MCR@"><img
                                         src="images/omero_mtools_mac.png"
                                         alt="Mac OS X Client Download"
                                      /></a></td>
