--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -73,11 +73,6 @@
                                 >downloads folder</a>. </p></li>
                     <li><p>Choose the version of OMERO.mtools for your
                         platform (Windows/Mac) below.</p></li>
-                    <li><p>The installer will fetch the 2016b MCR
-                        from Mathworks and install it for you if you do not
-                        already have it, but it may be more
-                        efficient to install it manually from the table below
-                        before installing OMERO.mtools.</p></li>
                     <li><p>Once downloaded simply unzip and run. Running from
                         a network drive is not recommended.</p></li>
                     <li><p>Source code is available on <a
@@ -118,6 +113,11 @@
                         </tbody>
                     </table>
                 </div>
+                <ul>
+                <li><p>The installer will fetch the 2016b MCR
+                        from Mathworks and install it for you if you do not
+                        already have it.</p></li>
+                </ul>
                 <h2><a name="mtools" id="mtools"></a>OMERO.mtools with MCR downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
