--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -55,7 +55,7 @@
                 <p>
                     <strong><a href="#mtools"
                             >OMERO.mtools without MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                            href="#mcr">OMERO.mtools with MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
+                            href="#mtools-mcr">OMERO.mtools with MCR</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#previous">Previous versions</a>
                     </strong></p>
                 <ul>
@@ -118,7 +118,7 @@
                         from Mathworks and install it for you if you do not
                         already have it.</p></li>
                 </ul>
-                <h2><a name="mtools" id="mtools"></a>OMERO.mtools with MCR downloads</h2>
+                <h2><a name="mtools-mcr" id="mtools-mcr"></a>OMERO.mtools with MCR downloads</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="OMERO.mtools downloads">
                         <tbody>
